--- a/notification.html
+++ b/notification.html
@@ -13,7 +13,7 @@
 }
 
 .notification-form textarea {
-    width: 100%;
+    width: 30%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -45,7 +45,7 @@
     <div class="notification-form">
         <h2>Send Notification</h2>
         <form id="send-notification-form">
-            <textarea id="notification-message" rows="4" placeholder="Enter your notification message here..." required></textarea>
+            <textarea id="notification-message" rows="4" placeholder="Enter your notification message here..." required></textarea><br>
             <button type="submit" class="btn">Send Notification</button>
         </form>
         <div id="response-message" class="mt-2"></div>
